<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_uma_mensagem"/>

    <Button
        android:id="@+id/buttonEncode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codificar"/>

    <Button
        android:id="@+id/buttonDecode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decodificar"/>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>
</LinearLayout>
