<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageViewResult"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/neutra"
        android:contentDescription="@string/result"/>

    <TextView
        android:id="@+id/textViewChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escolha_do_app"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/buttonRock"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/button_circle"
            android:src="@drawable/pedra"
            android:scaleType="fitCenter"
            android:contentDescription="@string/pedra"/>

        <ImageButton
            android:id="@+id/buttonPaper"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/button_circle"
            android:src="@drawable/papel"
            android:scaleType="fitCenter"
            android:contentDescription="@string/papel"/>

        <ImageButton
            android:id="@+id/buttonScissors"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/button_circle"
            android:src="@drawable/tesoura"
            android:scaleType="fitCenter"
            android:contentDescription="@string/tesoura"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewAIChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>
</LinearLayout>
