<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insira_um_valor" />

    <Button
        android:id="@+id/buttonAddValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_valor" />

    <Button
        android:id="@+id/buttonRandomize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sortear" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewValues"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textViewRandomValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:visibility="gone" />

</LinearLayout>
